# waphoo

./: Makefile  main.py  pyproject.toml
games_project_pleshakova/VD_games/: cli.py
games_project_pleshakova/VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py
