[project]
name = "games-project-pleshakova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_pleshakova"]

[project.scripts]
VD-games = "games_project_pleshakova.VD_games.scripts.VD_main:main"
