[project]
name = "games-project-pleshakova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_pleshakova"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[project.scripts]
VD-games = "games_project_pleshakova.VD_games.scripts.VD_main:main"
VD-even = "games_project_pleshakova.VD_games.scripts.VD_even:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
